add map with marker

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.4",
+        "@tomtom-international/web-sdk-maps": "^6.15.0",
         "vue-router": "^3.5.2"
     }
 }
